# AYT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bash_scripts/cifar10/: prep.sh  train_classifier.sh  train_ecm.sh  train_ecm_ayt.sh
configs/: eval_FID.yaml  train_clf.yaml  train_dae.yaml  train_ecm.yaml
configs/aug/: deg.yaml  geo.yaml  geo_clr.yaml  geo_clr_deg.yaml  geo_deg.yaml  idt.yaml
configs/autoencoder/: cifar10_ae.yaml
configs/classifier/: densenet.yaml  resnet.yaml  vgg.yaml  vggmod.yaml  vit.yaml
configs/dataset/: cifar10.yaml
configs/loss/: lpips.yaml  pseudohuber.yaml
configs/optim/: adam.yaml  radam.yaml
configs/solver/: euler.yaml  eulermaruyama.yaml
configs/tdist/: continuouslognormal.yaml
configs/unet/: cifar10_unet.yaml
scripts/eval/: eval_FID.py
scripts/train_ae/: train_ae.py  train_dae.py
scripts/train_clf/: train_clf.py  train_clf_ae.py
scripts/train_cm/: train_ccd.py  train_ccd_ayt.py  train_ecm.py  train_ecm_adv.py  train_ecm_ae.py  train_ecm_ayt.py
src/ayt/: augmentations.py  augmentations_lat.py  autoencoders.py  classifiers.py  constants.py  datasets.py  losses.py  solvers.py  step_schedules.py  tdists.py  unets.py  utils.py
src/ayt/dnnlib/: __init__.py
src/ayt/torch_utils/: __init__.py  misc.py  persistence.py
