[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ayt"
dynamic = ["version"]
description = "Align Your Tangent"
requires-python = ">=3.9"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "BiSPL"}
]
dependencies = [
]